# mymed

./: .gitignore  CONFIG.toml  Cargo.toml  README-medfiles.md  README.md  index.html  install.sh  patient.html
med_viewer/: .gitignore  Cargo.toml  README.md  index.html  medications.db  patient.html
med_viewer/src/: main.rs
medfiles/: 06102025.med  ANDRE_BATISTA_MILLET_NEVES.med  andre_luiz_freitas_trindade.med  arquivo.med  atendimento01092025.med  atendimento06052025.med  atendimento082025.med  atendimento2.med  atendimento22092025.med  atendimento_cardiologista_1.med  atendimento_clinico_geral_1.med  atendimento_clinico_geral_2.med  atendimento_dermatologista_1.med  atendimento_endocrinologista_1.med  atendimento_ginecologista_1.med  atendimento_neurologista_1.med  atendimento_neurologista_2.med  atendimento_psiquiatra_1.med  atendimento_psiquiatra_2.med  cleusa_ferreira_de_sa.med  cleusa_ferreira_de_sa_2.med  cleusa_ferreira_de_sa_3.med  darmon_sancor_rodrigues_motta.med  darmon_sancor_rodrigues_motta_2.med  darmon_sancor_rodrigues_motta_3.med  eurides_francisca_dias_alvarenga.med  eurides_francisca_dias_alvarenga_2.med  eurides_francisca_dias_alvarenga_3.med  fernanda_da_silva_vieira_de_melo_chagas.med  fernanda_da_silva_vieira_de_melo_chagas_2.med  fernanda_da_silva_vieira_de_melo_chagas_3.med  leilane_nunes.med  leilane_nunes_2.med  leilane_nunes_3.med  maria_aparecida_dos_santos.med  mario_alcindo_cunha_goncalves.med  marta_dos_santos_bezerra.med  miracema.med  receita.med  receita2.med  (+1 more)
src/: editor.rs  main.rs  patient_mgr.rs  viewer.rs
