[package]
name = "mymed"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
webbrowser = "0.8"

[[bin]]
name = "mymed"
path = "src/main.rs"

[[bin]]
name = "mymed_patient_manager"
path = "src/patient_mgr.rs"

[[bin]]
name = "mymed_editor"
path = "src/editor.rs"

[[bin]]
name = "mymed_viewer"
path = "src/viewer.rs"
